fiddling with page

--- a/examples/gemchart/pages/home.html
+++ b/examples/gemchart/pages/home.html
@@ -7,13 +7,17 @@
   </head>
 
   <body>
-    <div class="back" align="center">
-      <p class="title">
-	Pete Ohler's Gem History
-      </p>
-    </div>
+    <p class="title">
+      Pete Ohler's Gem History
+    </p>
     <p>something goes here
     </p>
-
+    <table class="graph" width="100%">
+      <tr>
+	<td>
+	  hello
+	</td>
+      </tr>
+    </table>
   </body>
 </html>
