--- a/examples/gemchart/pages/home.html
+++ b/examples/gemchart/pages/home.html
@@ -20,25 +20,34 @@
       </tr>
     </table>
     <script>
-      function graphIt(pts) {
-          context.font = 'normal 10pt Calibri';
-          context.strokeStyle = '#0000ff';
-          var y = 1;
-          for (var key in pts){
-            y += 20;
-            context.strokeText(key, 2, y);
-            for (var pt in pts[key]){
-              y += 20;
-              context.strokeText("-- " + pt + ":" + pts[key][pt], 10, y);
-            }
-          }
-      }
-
       var canvas = document.getElementById('graph');
       var context = canvas.getContext('2d');
       var w = canvas.width;
       var h = canvas.height;
-      var r = 8
+      var r = 8;
+      var pad = 30;
+      var gw = w - pad - r;
+      var gh = h - pad - r;
+
+      function graphIt(ptSets) {
+        context.strokeStyle = '#0000ff';
+        var y = 20;
+        for (var key in ptSets){
+          var pts=ptSets[key];
+          var j0=pts[0][0];
+          var je=pts[pts.length-1][0];
+          var dj = je-j0;
+          var dmx=pts[pts.length-1][1]*1.0;
+
+          context.beginPath();
+          context.moveTo(pad, h-pad);
+          for (var i in pts){
+            var pt=pts[i];
+            context.lineTo(pad+((pt[0]-j0)*gw/dj), h-pad-(pt[1]*gh/dmx));
+          }
+          context.stroke();
+        }
+      }
 
       context.lineWidth = 1;
       context.beginPath();
@@ -56,7 +65,6 @@
       context.fillStyle = 'white';
       context.fill();
 
-      var pad = 30
       context.beginPath();
       context.strokeStyle = '#c08000';
       context.moveTo(pad, r);
