--- a/examples/gemchart/pages/home.html
+++ b/examples/gemchart/pages/home.html
@@ -21,7 +21,7 @@
     </table>
     <script>
       var canvas = document.getElementById('graph');
-      var context = canvas.getContext('2d');
+      var ctx = canvas.getContext('2d');
       var w = canvas.width;
       var h = canvas.height;
       var r = 8;
@@ -29,55 +29,82 @@
       var gw = w - pad - r;
       var gh = h - pad - r;
 
-      function graphIt(ptSets) {
-        context.strokeStyle = '#0000ff';
-        var y = 20;
-        for (var key in ptSets){
-          var pts=ptSets[key];
-          var j0=pts[0][0];
-          var je=pts[pts.length-1][0];
-          var dj = je-j0;
-          var dmx=pts[pts.length-1][1]*1.0;
+      function graphIt(gem, pts) {
+        var j0=pts[0][0];
+        var je=pts[pts.length-1][0];
+        var dj = je-j0;
+        var dmx=pts[pts.length-1][1]*1.0;
 
-          context.beginPath();
-          context.moveTo(pad, h-pad);
-          for (var i in pts){
-            var pt=pts[i];
-            context.lineTo(pad+((pt[0]-j0)*gw/dj), h-pad-(pt[1]*gh/dmx));
-          }
-          context.stroke();
+        ctx.fillStyle='black';
+        ctx.font='12pt Georgia';
+        ctx.lineWidth=1;
+
+        // TBD calculate dd from dmx
+        var dd=200000;
+        var y=0;
+        ctx.strokeStyle='#dfefff';
+        for(var d=dd;d<dmx;d+=dd){
+          y=h-pad-(d*gh/dmx);
+          ctx.beginPath();
+          ctx.moveTo(pad+1,y);
+          ctx.lineTo(w-r,y);
+          ctx.stroke();
         }
+        dd*=5;
+        ctx.strokeStyle='#b0d0f0';
+        for(var d=dd;d<dmx;d+=dd){
+          y=h-pad-(d*gh/dmx);
+          ctx.fillText((d/dd)+'M',4,y+4);
+          ctx.beginPath();
+          ctx.moveTo(pad-4,y);
+          ctx.lineTo(w-r,y);
+          ctx.stroke();
+        }
+
+        ctx.font='16pt Georgia';
+        ctx.fillText(gem+' - '+dmx+' downloads',pad+r, 24);
+
+        ctx.lineWidth=2;
+        ctx.strokeStyle='#0000ff';
+        ctx.beginPath();
+        ctx.moveTo(pad, h-pad);
+        for (var i in pts){
+          var pt=pts[i];
+          ctx.lineTo(pad+((pt[0]-j0)*gw/dj), h-pad-(pt[1]*gh/dmx));
+        }
+        ctx.stroke();
       }
 
-      context.lineWidth = 1;
-      context.beginPath();
-      context.strokeStyle = '#000080';
-      context.moveTo(r+1, 1);
-      context.lineTo(w-r, 1);
-      context.quadraticCurveTo(w-1, 1, w-1, r);
-      context.lineTo(w-1, h-r);
-      context.quadraticCurveTo(w-1, h-1, w-r, h-1);
-      context.lineTo(r, h-2);
-      context.quadraticCurveTo(1, h-1, 1, h-r);
-      context.lineTo(0, r);
-      context.quadraticCurveTo(1, 1, r, 1);
-      context.stroke();
-      context.fillStyle = 'white';
-      context.fill();
+      ctx.lineWidth=1;
+      ctx.beginPath();
+      ctx.strokeStyle = '#000080';
+      ctx.moveTo(r+1, 1);
+      ctx.lineTo(w-r, 1);
+      ctx.quadraticCurveTo(w-1, 1, w-1, r);
+      ctx.lineTo(w-1, h-r);
+      ctx.quadraticCurveTo(w-1, h-1, w-r, h-1);
+      ctx.lineTo(r, h-2);
+      ctx.quadraticCurveTo(1, h-1, 1, h-r);
+      ctx.lineTo(0, r);
+      ctx.quadraticCurveTo(1, 1, r, 1);
+      ctx.stroke();
+      ctx.fillStyle = 'white';
+      ctx.fill();
 
-      context.beginPath();
-      context.strokeStyle = '#c08000';
-      context.moveTo(pad, r);
-      context.lineTo(pad, h-pad+4);
-      context.moveTo(pad-4, h-pad);
-      context.lineTo(w-r, h-pad);
-      context.stroke();
+      ctx.beginPath();
+      ctx.strokeStyle = '#c08000';
+      ctx.moveTo(pad, r);
+      ctx.lineTo(pad, h-pad+4);
+      ctx.moveTo(pad-4, h-pad);
+      ctx.lineTo(w-r, h-pad);
+      ctx.stroke();
 
+      gem='oj'
       var request = new XMLHttpRequest();
-      request.open('GET', 'oj.json', true);
+      request.open('GET', gem+'.json', true);
       request.onreadystatechange = function() {
         if(4 == request.readyState && 200 == request.status) {
-          graphIt(JSON.parse(request.responseText));
+          graphIt(gem, JSON.parse(request.responseText)[gem]);
         }
       };
       request.send(null);
