added non functional buttons

--- a/examples/gemchart/pages/home.html
+++ b/examples/gemchart/pages/home.html
@@ -10,8 +10,14 @@
     <p class="title">
       Pete Ohler's Gem History
     </p>
-    <p>something goes here
-    </p>
+    <form> 
+      <input type="button" value="Oj" name="oj-button" class="buttonOn"/>
+      <input type="button" value="Ox" name="ox-button" class="buttonOff"/>
+      <input type="button" value="OFlow" name="oflow-button" class="buttonOff"/>
+      <input type="button" value="Opee" name="opee-button" class="buttonOff"/>
+      <input type="button" value="OTerm" name="oterm-button" class="buttonOff"/>
+      <input type="button" value="ODisk" name="odisk-button" class="buttonOff"/>
+    </form>
     <table >
       <tr>
 	<td>
