added piper to gems

--- a/examples/gemchart/pages/home.html
+++ b/examples/gemchart/pages/home.html
@@ -19,6 +19,7 @@
 	  <td class="button-td"><input type="button" value="Opee" name="opee" class="button" onClick="loadGem('opee')"/></td>
 	  <td class="button-td"><input type="button" value="OTerm" name="oterm" class="button" onClick="loadGem('oterm')"/></td>
 	  <td class="button-td"><input type="button" value="ODisk" name="odisk" class="button" onClick="loadGem('odisk')"/></td>
+	  <td class="button-td"><input type="button" value="Piper" name="piper-push" class="button" onClick="loadGem('piper-push')"/></td>
 	</tr>
       </table>
     </form>
