fixed name of piper gem

--- a/examples/gemchart/pages/home.html
+++ b/examples/gemchart/pages/home.html
@@ -19,7 +19,7 @@
 	  <td class="button-td"><input type="button" value="Opee" name="opee" class="button" onClick="loadGem('opee')"/></td>
 	  <td class="button-td"><input type="button" value="OTerm" name="oterm" class="button" onClick="loadGem('oterm')"/></td>
 	  <td class="button-td"><input type="button" value="ODisk" name="odisk" class="button" onClick="loadGem('odisk')"/></td>
-	  <td class="button-td"><input type="button" value="Piper" name="piper-push" class="button" onClick="loadGem('piper-push')"/></td>
+	  <td class="button-td"><input type="button" value="Piper" name="piper-ruby" class="button" onClick="loadGem('piper-ruby')"/></td>
 	</tr>
       </table>
     </form>
@@ -75,6 +75,18 @@ function graphIt(gem, pts) {
     var vpad=30;
     var gw=w-hpad-r;
     var gh=h-vpad-r;
+
+
+
+
+
+
+
+
+
+
+
+
 
     ctx.lineWidth=1;
     ctx.beginPath();
