--- a/examples/gemchart/pages/home.html
+++ b/examples/gemchart/pages/home.html
@@ -20,6 +20,7 @@
 	  <td class="button-td"><input type="button" value="OTerm" name="oterm" class="button" onClick="loadGem('oterm')"/></td>
 	  <td class="button-td"><input type="button" value="ODisk" name="odisk" class="button" onClick="loadGem('odisk')"/></td>
 	  <td class="button-td"><input type="button" value="Piper" name="piper-ruby" class="button" onClick="loadGem('piper-ruby')"/></td>
+	  <td class="button-td"><input type="button" value="WABuR" name="wabur" class="button" onClick="loadGem('wabur')"/></td>
 	</tr>
       </table>
     </form>
@@ -75,19 +76,6 @@ function graphIt(gem, pts) {
     var vpad=30;
     var gw=w-hpad-r;
     var gh=h-vpad-r;
-
-
-
-
-
-
-
-
-
-
-
-
-
     ctx.lineWidth=1;
     ctx.beginPath();
     ctx.strokeStyle='#000080';
