--- a/examples/gemchart/pages/home.html
+++ b/examples/gemchart/pages/home.html
@@ -21,6 +21,7 @@
 	  <td class="button-td"><input type="button" value="ODisk" name="odisk" class="button" onClick="loadGem('odisk')"/></td>
 	  <td class="button-td"><input type="button" value="Piper" name="piper-ruby" class="button" onClick="loadGem('piper-ruby')"/></td>
 	  <td class="button-td"><input type="button" value="WABuR" name="wabur" class="button" onClick="loadGem('wabur')"/></td>
+	  <td class="button-td"><input type="button" value="Agoo" name="agoo" class="button" onClick="loadGem('agoo)"/></td>
 	</tr>
       </table>
     </form>
